Tests/RunCMake/CMakePresets/UnknownArchitectureStrategy-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/UnknownArchitectureStrategy:
Error: @9,21: Invalid preset
        "strategy": "unknown"
                    \^$
